register/login pages added, product section in progress

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -1,4 +1,5 @@
 header{
+    position: static;
     height: 580px;
     background-image: url("../img/banner.jpg");
 }
@@ -8,8 +9,10 @@ header{
     height: 670px;
 }
 
+
 footer{
-    position: static;
+    position: relative;
+    margin-top: 60px;
     height: 210px;
     background-image: url("../img/footer.jpg");
     background-color: grey;
