--- a/public/css/app.css
+++ b/public/css/app.css
@@ -541,166 +541,40 @@ video {
     max-width: 1536px;
   }
 }
-.static {
-  position: static;
-}
-.fixed {
-  position: fixed;
-}
 .absolute {
   position: absolute;
 }
 .relative {
   position: relative;
 }
-.inset-x-0 {
-  left: 0px;
-  right: 0px;
-}
-.top-32 {
-  top: 8rem;
-}
-.top-28 {
-  top: 7rem;
-}
-.bottom-0 {
-  bottom: 0px;
-}
-.left-10 {
-  left: 2.5rem;
-}
-.left-80 {
-  left: 20rem;
-}
-.left-56 {
-  left: 14rem;
-}
-.right-40 {
-  right: 10rem;
-}
-.right-32 {
-  right: 8rem;
-}
-.right-2\/3 {
-  right: 66.666667%;
-}
-.right-1\/2 {
-  right: 50%;
-}
-.right-1\/4 {
-  right: 25%;
-}
-.right-auto {
-  right: auto;
-}
-.right-52 {
-  right: 13rem;
-}
-.right-44 {
-  right: 11rem;
-}
-.right-24 {
-  right: 6rem;
-}
-.left-5 {
-  left: 1.25rem;
-}
-.left-32 {
-  left: 8rem;
+.top-16 {
+  top: 4rem;
 }
 .left-1\/2 {
   left: 50%;
 }
-.left-44 {
-  left: 11rem;
-}
-.left-48 {
-  left: 12rem;
-}
-.-left-64 {
-  left: -16rem;
-}
-.left-64 {
-  left: 16rem;
-}
-.left-96 {
-  left: 24rem;
-}
-.left-52 {
-  left: 13rem;
-}
-.right-1 {
-  right: 0.25rem;
-}
-.top-1\/2 {
-  top: 50%;
-}
-.top-16 {
-  top: 4rem;
-}
-.top-10 {
-  top: 2.5rem;
-}
-.top-1\/4 {
-  top: 25%;
+.bottom-0 {
+  bottom: 0px;
 }
 .top-14 {
   top: 3.5rem;
 }
-.top-6 {
-  top: 1.5rem;
-}
-.top-1\/3 {
-  top: 33.333333%;
-}
-.top-2\/3 {
-  top: 66.666667%;
-}
-.-top-16 {
-  top: -4rem;
-}
-.-top-20 {
-  top: -5rem;
-}
 .top-20 {
   top: 5rem;
-}
-.-top-24 {
-  top: -6rem;
-}
-.top-24 {
-  top: 6rem;
-}
-.left-2 {
-  left: 0.5rem;
-}
-.right-3 {
-  right: 0.75rem;
-}
-.top-12 {
-  top: 3rem;
-}
-.m-10 {
-  margin: 2.5rem;
-}
-.m-0 {
-  margin: 0px;
-}
-.m-1 {
-  margin: 0.25rem;
-}
-.m-3 {
-  margin: 0.75rem;
 }
 .m-2 {
   margin: 0.5rem;
 }
-.m-0\.5 {
-  margin: 0.125rem;
+.m-1 {
+  margin: 0.25rem;
 }
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+.mx-2 {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
 }
 .mx-1 {
   margin-left: 0.25rem;
@@ -715,26 +589,32 @@ video {
 .ml-24 {
   margin-left: 6rem;
 }
-.ml-2 {
-  margin-left: 0.5rem;
-}
-.mt-5 {
-  margin-top: 1.25rem;
-}
-.mb-5 {
-  margin-bottom: 1.25rem;
-}
 .mb-2 {
   margin-bottom: 0.5rem;
 }
-.mt-14 {
-  margin-top: 3.5rem;
+.mb-3 {
+  margin-bottom: 0.75rem;
 }
-.mt-8 {
-  margin-top: 2rem;
+.ml-12 {
+  margin-left: 3rem;
+}
+.ml-14 {
+  margin-left: 3.5rem;
+}
+.ml-16 {
+  margin-left: 4rem;
+}
+.ml-10 {
+  margin-left: 2.5rem;
+}
+.ml-8 {
+  margin-left: 2rem;
 }
 .ml-1 {
   margin-left: 0.25rem;
+}
+.ml-20 {
+  margin-left: 5rem;
 }
 .ml-0\.5 {
   margin-left: 0.125rem;
@@ -742,53 +622,32 @@ video {
 .ml-0 {
   margin-left: 0px;
 }
-.ml-5 {
-  margin-left: 1.25rem;
+.mt-auto {
+  margin-top: auto;
 }
-.h-10 {
-  height: 2.5rem;
-}
-.h-56 {
-  height: 14rem;
-}
-.h-64 {
-  height: 16rem;
+.mb-14 {
+  margin-bottom: 3.5rem;
 }
 .h-72 {
   height: 18rem;
 }
-.h-48 {
-  height: 12rem;
-}
-.h-4\/5 {
-  height: 80%;
-}
-.h-96 {
-  height: 24rem;
-}
-.h-1\/2 {
-  height: 50%;
-}
-.h-3\/6 {
-  height: 50%;
-}
-.h-1\/4 {
-  height: 25%;
-}
-.h-5\/6 {
-  height: 83.333333%;
+.h-10 {
+  height: 2.5rem;
 }
 .h-4\/6 {
   height: 66.666667%;
 }
-.max-h-10 {
-  max-height: 2.5rem;
+.h-60 {
+  height: 15rem;
+}
+.h-80 {
+  height: 20rem;
+}
+.h-20 {
+  height: 5rem;
 }
 .w-1\/6 {
   width: 16.666667%;
-}
-.w-32 {
-  width: 8rem;
 }
 .w-36 {
   width: 9rem;
@@ -802,114 +661,45 @@ video {
 .w-80 {
   width: 20rem;
 }
-.w-auto {
-  width: auto;
-}
-.scroll-mt-60 {
-  scroll-margin-top: 15rem;
-}
-.rounded {
-  border-radius: 0.25rem;
-}
 .rounded-md {
   border-radius: 0.375rem;
 }
-.rounded-sm {
-  border-radius: 0.125rem;
-}
-.rounded-r-2xl {
-  border-top-right-radius: 1rem;
-  border-bottom-right-radius: 1rem;
-}
-.rounded-r-md {
-  border-top-right-radius: 0.375rem;
-  border-bottom-right-radius: 0.375rem;
-}
-.rounded-b {
-  border-bottom-right-radius: 0.25rem;
-  border-bottom-left-radius: 0.25rem;
-}
-.rounded-br {
-  border-bottom-right-radius: 0.25rem;
-}
-.bg-gray-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
-}
-.bg-gray-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
-}
-.bg-green-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
-}
-.bg-blue-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(147 197 253 / var(--tw-bg-opacity));
-}
-.bg-green-50 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(240 253 244 / var(--tw-bg-opacity));
-}
-.bg-green-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(74 222 128 / var(--tw-bg-opacity));
-}
-.bg-red-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(153 27 27 / var(--tw-bg-opacity));
-}
-.bg-red-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(185 28 28 / var(--tw-bg-opacity));
-}
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-.bg-blue-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
-}
-.bg-red-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
-}
-.bg-pink-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(249 168 212 / var(--tw-bg-opacity));
-}
-.bg-pink-50 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(253 242 248 / var(--tw-bg-opacity));
-}
-.bg-blue-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(96 165 250 / var(--tw-bg-opacity));
-}
-.bg-purple-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(216 180 254 / var(--tw-bg-opacity));
+.border-y-green-300 {
+  --tw-border-opacity: 1;
+  border-top-color: rgb(134 239 172 / var(--tw-border-opacity));
+  border-bottom-color: rgb(134 239 172 / var(--tw-border-opacity));
 }
 .bg-red-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(220 38 38 / var(--tw-bg-opacity));
 }
-.object-center {
-  -o-object-position: center;
-     object-position: center;
+.bg-green-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
 }
-.object-left {
-  -o-object-position: left;
-     object-position: left;
+.bg-green-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(134 239 172 / var(--tw-bg-opacity));
 }
-.object-right {
-  -o-object-position: right;
-     object-position: right;
+.bg-green-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(187 247 208 / var(--tw-bg-opacity));
 }
-.p-1 {
-  padding: 0.25rem;
+.bg-green-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(74 222 128 / var(--tw-bg-opacity));
+}
+.bg-pink-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(251 207 232 / var(--tw-bg-opacity));
+}
+.bg-blue-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(96 165 250 / var(--tw-bg-opacity));
+}
+.bg-blue-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(147 197 253 / var(--tw-bg-opacity));
 }
 .p-0\.5 {
   padding: 0.125rem;
@@ -917,29 +707,20 @@ video {
 .p-0 {
   padding: 0px;
 }
+.p-1 {
+  padding: 0.25rem;
+}
+.p-20 {
+  padding: 5rem;
+}
 .text-center {
   text-align: center;
-}
-.align-text-bottom {
-  vertical-align: text-bottom;
 }
 .font-semibold {
   font-weight: 600;
 }
-.text-gray-300 {
-  --tw-text-opacity: 1;
-  color: rgb(209 213 219 / var(--tw-text-opacity));
-}
 .text-gray-200 {
   --tw-text-opacity: 1;
   color: rgb(229 231 235 / var(--tw-text-opacity));
-}
-.text-green-400 {
-  --tw-text-opacity: 1;
-  color: rgb(74 222 128 / var(--tw-text-opacity));
-}
-.drop-shadow-md {
-  --tw-drop-shadow: drop-shadow(0 4px 3px rgb(0 0 0 / 0.07)) drop-shadow(0 2px 2px rgb(0 0 0 / 0.06));
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
