--- a/public/css/app.css
+++ b/public/css/app.css
@@ -562,15 +562,27 @@ video {
 .top-20 {
   top: 5rem;
 }
+.m-14 {
+  margin: 3.5rem;
+}
 .m-2 {
   margin: 0.5rem;
+}
+.m-1 {
+  margin: 0.25rem;
+}
+.m-10 {
+  margin: 2.5rem;
+}
+.m-8 {
+  margin: 2rem;
+}
+.m-6 {
+  margin: 1.5rem;
 }
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
-}
-.mt-3 {
-  margin-top: 0.75rem;
 }
 .mt-2 {
   margin-top: 0.5rem;
@@ -578,11 +590,23 @@ video {
 .mb-2 {
   margin-bottom: 0.5rem;
 }
+.mt-3 {
+  margin-top: 0.75rem;
+}
 .ml-24 {
   margin-left: 6rem;
 }
 .mb-3 {
   margin-bottom: 0.75rem;
+}
+.ml-2 {
+  margin-left: 0.5rem;
+}
+.h-4\/6 {
+  height: 66.666667%;
+}
+.h-40 {
+  height: 10rem;
 }
 .h-72 {
   height: 18rem;
@@ -590,39 +614,28 @@ video {
 .h-10 {
   height: 2.5rem;
 }
-.h-4\/6 {
-  height: 66.666667%;
-}
-.h-20 {
-  height: 5rem;
-}
 .w-36 {
   width: 9rem;
 }
 .w-1\/6 {
   width: 16.666667%;
 }
-.w-24 {
-  width: 6rem;
+.w-10 {
+  width: 2.5rem;
+}
+.basis-1\/2 {
+  flex-basis: 50%;
 }
 .rounded-md {
   border-radius: 0.375rem;
 }
-.bg-blue-400 {
+.bg-pink-300 {
   --tw-bg-opacity: 1;
-  background-color: rgb(96 165 250 / var(--tw-bg-opacity));
+  background-color: rgb(249 168 212 / var(--tw-bg-opacity));
 }
 .bg-red-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(220 38 38 / var(--tw-bg-opacity));
-}
-.bg-green-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(134 239 172 / var(--tw-bg-opacity));
-}
-.bg-pink-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(251 207 232 / var(--tw-bg-opacity));
 }
 .p-0\.5 {
   padding: 0.125rem;
@@ -630,8 +643,14 @@ video {
 .p-0 {
   padding: 0px;
 }
+.p-4 {
+  padding: 1rem;
+}
 .p-2 {
   padding: 0.5rem;
+}
+.p-1 {
+  padding: 0.25rem;
 }
 .text-center {
   text-align: center;
