--- a/public/css/app.css
+++ b/public/css/app.css
@@ -562,11 +562,17 @@ video {
 .top-20 {
   top: 5rem;
 }
+.right-0 {
+  right: 0px;
+}
 .m-10 {
   margin: 2.5rem;
 }
 .m-2 {
   margin: 0.5rem;
+}
+.m-1 {
+  margin: 0.25rem;
 }
 .mx-auto {
   margin-left: auto;
@@ -587,6 +593,9 @@ video {
 .mb-3 {
   margin-bottom: 0.75rem;
 }
+.mt-1 {
+  margin-top: 0.25rem;
+}
 .h-4\/6 {
   height: 66.666667%;
 }
@@ -599,11 +608,24 @@ video {
 .h-72 {
   height: 18rem;
 }
+.h-14 {
+  height: 3.5rem;
+}
+.h-16 {
+  height: 4rem;
+}
+.h-20 {
+  height: 5rem;
+}
 .w-36 {
   width: 9rem;
 }
 .rounded-md {
   border-radius: 0.375rem;
+}
+.bg-blue-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
 }
 .p-0\.5 {
   padding: 0.125rem;
@@ -623,11 +645,19 @@ video {
 .text-center {
   text-align: center;
 }
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
 .font-semibold {
   font-weight: 600;
 }
 .text-gray-200 {
   --tw-text-opacity: 1;
   color: rgb(229 231 235 / var(--tw-text-opacity));
+}
+.text-red-500 {
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
