--- a/public/css/app.css
+++ b/public/css/app.css
@@ -541,6 +541,12 @@ video {
     max-width: 1536px;
   }
 }
+.static {
+  position: static;
+}
+.fixed {
+  position: fixed;
+}
 .absolute {
   position: absolute;
 }
@@ -559,20 +565,44 @@ video {
 .bottom-0 {
   bottom: 0px;
 }
+.right-0 {
+  right: 0px;
+}
 .top-20 {
   top: 5rem;
 }
-.right-0 {
-  right: 0px;
+.bottom-1 {
+  bottom: 0.25rem;
+}
+.bottom-5 {
+  bottom: 1.25rem;
+}
+.bottom-10 {
+  bottom: 2.5rem;
+}
+.bottom-20 {
+  bottom: 5rem;
+}
+.top-40 {
+  top: 10rem;
+}
+.top-32 {
+  top: 8rem;
+}
+.top-1\/2 {
+  top: 50%;
+}
+.top-1\/4 {
+  top: 25%;
+}
+.top-52 {
+  top: 13rem;
 }
 .m-10 {
   margin: 2.5rem;
 }
 .m-2 {
   margin: 0.5rem;
-}
-.m-1 {
-  margin: 0.25rem;
 }
 .mx-auto {
   margin-left: auto;
@@ -596,6 +626,9 @@ video {
 .mt-1 {
   margin-top: 0.25rem;
 }
+.mt-auto {
+  margin-top: auto;
+}
 .h-4\/6 {
   height: 66.666667%;
 }
@@ -608,24 +641,15 @@ video {
 .h-72 {
   height: 18rem;
 }
-.h-14 {
-  height: 3.5rem;
-}
-.h-16 {
-  height: 4rem;
-}
-.h-20 {
-  height: 5rem;
-}
 .w-36 {
   width: 9rem;
 }
 .rounded-md {
   border-radius: 0.375rem;
 }
-.bg-blue-600 {
+.bg-white {
   --tw-bg-opacity: 1;
-  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 .p-0\.5 {
   padding: 0.125rem;
