--- a/public/css/common.css
+++ b/public/css/common.css
@@ -8,7 +8,6 @@ main{
     min-height: calc(100vh - 60px);
     padding-top: 60px;
     padding-bottom: 60px;
-
 }
 
 footer{
@@ -16,3 +15,15 @@ footer{
     height: 210px;
     background-image: url("../img/footer.jpg");
 }
+
+
+.img:hover {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(165, 40, 22, .4);
+}
+
+
